# patina

./: .dockerignore  .editorconfig  .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  install.sh
.claude/rules/: docker.md  php.md  rust.md
.claude/skills/add-wp-function/: SKILL.md
.claude/skills/benchmark/: SKILL.md
.claude/skills/debug-fixture-mismatch/: SKILL.md
.claude/skills/profile-wp-functions/: SKILL.md
.claude/skills/test-in-wordpress/: SKILL.md
.github/workflows/: benchmark.yml  ci.yml  release.yml
crates/patina-bench/: Cargo.toml
crates/patina-bench/benches/: escaping.rs  kses.rs  pluggable.rs  sanitize.rs
crates/patina-core/: Cargo.toml
crates/patina-core/src/: lib.rs  test_support.rs
crates/patina-core/src/blocks/: grammar.rs  mod.rs  types.rs
crates/patina-core/src/escaping/: attr.rs  html.rs  mod.rs  specialchars.rs  url.rs
crates/patina-core/src/formatting/: autop.rs  clickable.rs  mod.rs  utf8.rs
crates/patina-core/src/kses/: allowed_html.rs  mod.rs  normalize.rs  protocols.rs  tag_parser.rs
crates/patina-core/src/pluggable/: mod.rs  sanitize_redirect.rs  validate_redirect.rs
crates/patina-core/src/sanitize/: filename.rs  mod.rs  title.rs
crates/patina-core/src/util/: byte_class.rs  entities.rs  mod.rs  null_bytes.rs
crates/patina-ext/: Cargo.toml
crates/patina-ext/src/: blocks_bridge.rs  kses_bridge.rs  lib.rs  panic_guard.rs  php_callback.rs
docker/: Dockerfile.build  Dockerfile.dev  docker-compose.dev.yml
docs/: ADDING-A-FUNCTION.md  BENCHMARKS.md  BENCHMARK_PLAN.md  DEPLOYMENT.md  IMPLEMENTATION_PLAN.md  PROJECT_STRUCTURE.md
fixtures/: README.md  esc_attr.json  esc_html.json  parse_blocks.json  sanitize_title_with_dashes.json  wp_kses_allowed_post_tags.json  wp_kses_allowed_protocols.json  wp_kses_post.json  wp_kses_uri_attributes.json  wp_sanitize_redirect.json
fixtures/baselines/phase10-sanitize-title/: manifest.json  report.md
fixtures/baselines/phase6-initial/: manifest.json  report.md
fixtures/baselines/phase7-paired/: manifest.json  report.md
fixtures/baselines/phase8-activation-cached/: manifest.json  report.md
fixtures/baselines/phase9-shim-filters/: manifest.json  report.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: esc_html.rs  sanitize_redirect.rs
php/: composer.json  phpunit.xml
php/benchmarks/: Runner.php  bench-kses.php  run.php
php/benchmarks/reference/: escaping.php  pluggable.php  sanitize.php
php/bridge/: patina-bridge.php
php/fixture-generator/: generate.php
php/fixture-generator/corpus/: html.php  strings.php  urls.php
php/fixture-generator/functions/: esc_attr.php  esc_html.php  parse_blocks.php  (+3 more)
php/tests/: FixtureTestCase.php  bootstrap.php
php/tests-integration/: ActivationCacheTest.php  EscFilterTest.php  IntegrationTestCase.php  KsesFilterTest.php  LooseTypingTest.php  OverrideTogglesTest.php  ParseBlocksTest.php  SanitizeTitleTest.php  bootstrap.php  phpunit.xml
profiling/: Dockerfile.profiling  docker-compose.yml  generate-fixtures.sh  k6-workloads.js  nginx.conf  profile-block-theme.php  profile-functions.php  seed-benchmark-content.sh  setup-wordpress.sh
profiling/benchmark-content/: README.md  WXR_PIN.env  classic-post.html  posts-long.html  posts-medium.html  posts-short.html
profiling/conf/: spx.ini
scripts/: bench-aggregate.py  bench-compare.py  bench-runner.sh  spx-ui.sh
(+30 files in other folders)
