[workspace]
resolver = "2"
members = [
    "crates/patina-core",
    "crates/patina-ext",
    "crates/patina-bench",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/PeterBooker/patina"
description = "A PHP extension that replaces WordPress core functions with optimized Rust implementations"
keywords = ["php", "wordpress", "performance", "extension"]
categories = ["web-programming"]

[profile.release]
lto = "fat"
codegen-units = 1
strip = "symbols"
opt-level = 3
# panic = "unwind" is the default — required for catch_unwind safety net.
# Do NOT set panic = "abort" here.
