[package]
name = "patina-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust implementations of WordPress core functions (no PHP dependency)"

[dependencies]
memchr = "2"
serde_json = "1"

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
