[package]
name = "patina-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Pure Rust implementations of WordPress core functions (no PHP dependency)"

[dependencies]
memchr = "2"
# `preserve_order` makes serde_json::Map use IndexMap, which preserves the
# insertion order of JSON object keys. Required for byte-for-byte match with
# PHP's json_decode — PHP always preserves insertion order on arrays.
serde_json = { version = "1", features = ["preserve_order"] }

[dev-dependencies]
serde = { version = "1", features = ["derive"] }
