[package]
name = "patina-ext"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "PHP extension wrapper for patina-core (cdylib via ext-php-rs)"
publish = false

[lib]
crate-type = ["cdylib"]
name = "patina"

[dependencies]
patina-core = { path = "../patina-core" }
ext-php-rs = "0.15"
serde_json = { version = "1", features = ["preserve_order"] }
